# qa_guru_7_18_baburkin

./: pyproject.toml
