[tool.poetry]
name = "qa-guru-baburkin-18"
version = "0.1.0"
description = ""
authors = ["Artem <a.baburkin@it.adcombo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selene = "2.0.0rc2,"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
